k8s/0.22.4/spire.yaml
---
# Source: vsecm/charts/spire/templates/hook-preinstall_spire-namespace.yaml
# /*
# |    Protect your secrets, protect your sensitive data.
# :    Explore VMware Secrets Manager docs at https://vsecm.com/
# </
# <>/  keep your secrets… secret
# >/
# <>/' Copyright 2023–present VMware Secrets Manager contributors.
# >/'  SPDX-License-Identifier: BSD-2-Clause
# */

apiVersion: v1
kind: Namespace
metadata:
    name: spire-system
---
# Source: vsecm/charts/spire/templates/spire-server.yaml
# Service definition for SPIRE server defining the gRPC port.
apiVersion: v1
kind: Service
metadata:
    name: spire-server
    namespace: spire-system
spec:
    type: NodePort
    ports:
        - name: api
          port: 8081
          targetPort: 8081
          protocol: TCP
    selector:
        app: spire-server
---
# Source: vsecm/charts/spire/templates/spire-server.yaml
# Service definition for SPIRE server bundle endpoint
apiVersion: v1
kind: Service
metadata:
    name: spire-server-bundle-endpoint
    namespace: spire-system
spec:
    type: NodePort
    ports:
        - name: api
          port: 8443
          protocol: TCP
    selector:
        app: spire-server
---
# Source: vsecm/charts/spire/templates/spire-server.yaml
#
# Service definition for SPIRE controller manager webhook
apiVersion: v1
kind: Service
metadata:
    name: spire-controller-manager-webhook-service
    namespace: spire-system
spec:
    ports:
        - port: 443
          protocol: TCP
          targetPort: 9443
    selector:
        app: spire-server
---
# Source: vsecm/charts/spire/templates/spire-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: spire-agent
    namespace: spire-system
    labels:
        app: spire-agent
spec:
    selector:
        matchLabels:
            app: spire-agent
    updateStrategy:
        type: RollingUpdate
    template:
        metadata:
            namespace: spire-system
            labels:
                app: spire-agent
        spec:
            hostPID: true
            hostNetwork: true
            dnsPolicy: ClusterFirstWithHostNet
            serviceAccountName: spire-agent
            containers:
                - name: spire-agent
                  image: ghcr.io/spiffe/spire-agent:1.8.7
                  imagePullPolicy: IfNotPresent
                  args: ["-config", "/run/spire/config/agent.conf"]
                  volumeMounts:
                      - name: spire-config
                        mountPath: /run/spire/config
                        readOnly: true
                      - name: spire-bundle
                        mountPath: /run/spire/bundle
                        readOnly: true
                      - name: spire-token
                        mountPath: /var/run/secrets/tokens
                      - name: spire-agent-socket-dir
                        mountPath: /run/spire/sockets
                # This is the container which runs the SPIFFE CSI driver.
                - name: spiffe-csi-driver
                  image: ghcr.io/spiffe/spiffe-csi-driver:0.2.4
                  imagePullPolicy: IfNotPresent
                  args:
                      [
                          "-workload-api-socket-dir",
                          "/spire-agent-socket",
                          "-csi-socket-path",
                          "/spiffe-csi/csi.sock",
                      ]
                  volumeMounts:
                      # The volume containing the SPIRE agent socket. The SPIFFE CSI
                      # driver will mount this directory into containers.
                      - mountPath: /spire-agent-socket
                        name: spire-agent-socket-dir
                        readOnly: true
                      # The volume that will contain the CSI driver socket shared
                      # with the kubelet and the driver registrar.
                      - mountPath: /spiffe-csi
                        name: spiffe-csi-socket-dir
                      # The volume containing mount points for containers.
                      - mountPath: /var/lib/kubelet/pods
                        mountPropagation: Bidirectional
                        name: mountpoint-dir
                  securityContext:
                      privileged: true
                # This container runs the CSI Node Driver Registrar which takes care
                # of all the little details required to register a CSI driver with
                # the kubelet.
                - name: node-driver-registrar
                  image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.10.0
                  imagePullPolicy: IfNotPresent
                  args:
                      [
                          "-csi-address",
                          "/spiffe-csi/csi.sock",
                          "-kubelet-registration-path",
                          "/var/lib/kubelet/plugins/csi.spiffe.io/csi.sock",
                      ]
                  volumeMounts:
                      # The registrar needs access to the SPIFFE CSI driver socket
                      - mountPath: /spiffe-csi
                        name: spiffe-csi-socket-dir
                      # The registrar needs access to the Kubelet plugin registration
                      # directory
                      - name: kubelet-plugin-registration-dir
                        mountPath: /registration
            volumes:
                - name: spire-config
                  configMap:
                      name: spire-agent
                - name: spire-bundle
                  configMap:
                      name: spire-bundle
                - name: spire-token
                  projected:
                      sources:
                          - serviceAccountToken:
                                path: spire-agent
                                expirationSeconds: 7200
                                audience: spire-server

                # This volume is used to share the Workload API socket between the CSI
                # driver and SPIRE agent. Note, an emptyDir volume could also be used,
                # however, this can lead to broken bind mounts in the workload
                # containers if the agent pod is restarted (since the emptyDir
                # directory on the node that was mounted into workload containers by
                # the CSI driver belongs to the old pod instance and is no longer
                # valid).
                - name: spire-agent-socket-dir
                  hostPath:
                      path: /run/spire/sockets
                      type: DirectoryOrCreate

                # This volume is where the socket for kubelet->driver communication lives
                - name: spiffe-csi-socket-dir
                  hostPath:
                      path: /var/lib/kubelet/plugins/csi.spiffe.io
                      type: DirectoryOrCreate
                # This volume is where the SPIFFE CSI driver mounts volumes
                - name: mountpoint-dir
                  hostPath:
                      path: /var/lib/kubelet/pods
                      type: Directory
                # This volume is where the node-driver-registrar registers the plugin
                # with kubelet
                - name: kubelet-plugin-registration-dir
                  hostPath:
                      path: /var/lib/kubelet/plugins_registry
                      type: Directory
---
# Source: vsecm/charts/spire/templates/spire-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: spire-server
    namespace: spire-system
    labels:
        app: spire-server
spec:
    replicas: 1
    selector:
        matchLabels:
            app: spire-server
    template:
        metadata:
            namespace: spire-system
            labels:
                app: spire-server
        spec:
            serviceAccountName: spire-server
            shareProcessNamespace: true
            containers:
                - name: spire-server
                  image: ghcr.io/spiffe/spire-server:1.8.7
                  imagePullPolicy: IfNotPresent
                  args: ["-config", "/run/spire/server/config/server.conf"]
                  ports:
                      - containerPort: 8081
                  volumeMounts:
                      - name: spire-config
                        mountPath: /run/spire/server/config
                        readOnly: true
                      - name: spire-server-socket
                        mountPath: /tmp/spire-server/private
                - name: spire-controller-manager
                  image: ghcr.io/spiffe/spire-controller-manager:0.4.1
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 9443
                  args:
                      - "--config=spire-controller-manager-config.yaml"
                  volumeMounts:
                      - name: spire-server-socket
                        mountPath: /spire-server
                        readOnly: true
                      - name: spire-controller-manager-config
                        mountPath: /spire-controller-manager-config.yaml
                        subPath: spire-controller-manager-config.yaml
            volumes:
                - name: spire-config
                  configMap:
                      name: spire-server
                - name: spire-server-socket
                  emptyDir: {}
                - name: spire-controller-manager-config
                  configMap:
                      name: spire-controller-manager-config
---
# Source: vsecm/charts/spire/templates/spire-controller-manager-webhook.yaml
# /*
# |    Protect your secrets, protect your sensitive data.
# :    Explore VMware Secrets Manager docs at https://vsecm.com/
# </
# <>/  keep your secrets… secret
# >/
# <>/' Copyright 2023–present VMware Secrets Manager contributors.
# >/'  SPDX-License-Identifier: BSD-2-Clause
# */

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
    name: spire-controller-manager-webhook
webhooks:
    - admissionReviewVersions: ["v1"]
      clientConfig:
          service:
              name: spire-controller-manager-webhook-service
              namespace: spire-system
              path: /validate-spire-spiffe-io-v1alpha1-clusterfederatedtrustdomain
      failurePolicy: Fail
      name: vclusterfederatedtrustdomain.kb.io
      rules:
          - apiGroups: ["spire.spiffe.io"]
            apiVersions: ["v1alpha1"]
            operations: ["CREATE", "UPDATE"]
            resources: ["clusterfederatedtrustdomains"]
      sideEffects: None
    - admissionReviewVersions: ["v1"]
      clientConfig:
          service:
              name: spire-controller-manager-webhook-service
              namespace: spire-system
              path: /validate-spire-spiffe-io-v1alpha1-clusterspiffeid
      failurePolicy: Fail
      name: vclusterspiffeid.kb.io
      rules:
          - apiGroups: ["spire.spiffe.io"]
            apiVersions: ["v1alpha1"]
            operations: ["CREATE", "UPDATE"]
            resources: ["clusterspiffeids"]
      sideEffects: None
    - admissionReviewVersions: ["v1"]
      clientConfig:
          service:
              name: spire-controller-manager-webhook-service
              namespace: spire-system
              path: /validate-spire-spiffe-io-v1alpha1-clusterstaticentry
      failurePolicy: Fail
      name: clusterstaticentry.kb.io
      rules:
          - apiGroups: ["spire.spiffe.io"]
            apiVersions: ["v1alpha1"]
            operations: ["CREATE", "UPDATE"]
            resources: ["clusterstaticentries"]
      sideEffects: None
